syntax = "proto3";

package ru.labs.grading;

message ByeRequest {
  string byeName = 1;
}

message ByeResponse {
  string byeGreeting = 1;
}

service ByeService {
  rpc byeGreeting(ByeRequest) returns (ByeResponse);
}